<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_name"
            android:textSize="36sp"
            android:textAlignment="center"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/partner"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:layout_marginTop="15dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/txt_rider_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/looking_for"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:textSize="12sp"
        android:textAlignment="center"
        android:textColor="@color/bottomText"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_above="@id/txt_rider_app"
        android:layout_margin="16dp">

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="6dp"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_sign_in"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="6dp"
            android:text="@string/register"
            android:textColor="@color/btnRegister"
            android:background="@drawable/btn_register"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</RelativeLayout>